# BitService-2

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_LICENSES.md
includes/: Exceptions.hpp  Logger.hpp
source/: Logger.cpp  main.cpp
